--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,101 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+/*
+Globalna barva spletne strani (vkljucena v CSS)
+je = #03989E
+*/
+
+.bg-color{
+    --tw-bg-opacity: 1;
+    background-color: rgb(3 152 158 / var(--tw-bg-opacity));
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+/*Footer background color*/
+.bg-footer{
+    --tw-bg-opacity: 1;
+    background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
-* {
-  box-sizing: border-box;
+@layer components{
+    .text-color{
+        --tw-color-opacity: 1;
+        color: rgb(3 152 158 / var(--tw-color-opacity));
+    }
 }
+
+
+
+
+/*
+Navbar
+*/
+.button-nav{
+    @apply lg:text-black lg:hover:text-color text-gray-800 px-3 py-4 lg:py-2 flex items-center uppercase font-bold transition ease-in-out  hover:-translate-y-1 hover:scale-110 duration-300;
+}
+
+
+/*
+Foto
+*/
+.animacija{
+    @apply transition ease-in-out  hover:-translate-y-1 hover:scale-110 duration-300;
+}
+
+
+/*Footer animation typewriter*/
+.typewriter{
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
+
+
+
+
+
+
+
+
+/*
+Projects
+*/
+
+
+
+
+
+/*
+Contact page
+*/
+.icon-color{
+    --tw-color-opacity: 1;
+    color: rgb(136 136 136 / var(--tw-color-opacity));
+}
+
+
+
+
+
